# hrx-system-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: checks.yml  gpu.yml
crates/hip-buffer-tracer/: Cargo.toml
crates/hip-buffer-tracer/src/: lib.rs
crates/hip-function-table/: Cargo.toml
crates/hip-function-table/src/: lib.rs
crates/hip-intercept/: Cargo.toml  generate_passthrough.py
crates/hip-intercept/src/: lib.rs  passthrough_generated.rs
crates/hip-logging/: Cargo.toml
crates/hip-logging/src/: lib.rs
crates/hip-noop/: Cargo.toml
crates/hip-noop/src/: lib.rs
crates/hrx-libhrx/: Cargo.toml  build.rs
crates/hrx-libhrx/src/: buffer.rs  buffer_view.rs  common.rs  device.rs  executable.rs  fence.rs  handle.rs  host_allocator.rs  lib.rs  module.rs  pool.rs  queue_ops.rs  runtime.rs  semaphore.rs  status.rs  stream.rs  value_list.rs
crates/iree-hal/: Cargo.toml
crates/iree-hal/src/: lib.rs
crates/iree-sys/: Cargo.toml  README.md  build.rs  iree_archives.txt
crates/iree-sys/src/: abi_layout.rs  fem.rs  init.rs  lib.rs  mock.rs
crates/iree-sys/tests/: link_smoke.rs
fuzz/: Cargo.toml  build.rs
fuzz/fuzz_targets/: buffer_lifecycle.rs  value_list_lifecycle.rs
plans/: rust-port-plan.md  rust-port-safety-plan.md
results/: BASELINE.md  bench_baseline.csv  bench_libhrx_parity.csv  c-hrx.stderr  clr.out  hrx.out
scripts/: bench_baseline.sh  bench_compare.py  bench_gate.py  bench_libhrx_parity.sh  bind_amdgpu.sh  buffer_tracer_test.sh  build_c_baseline.sh  check_abi_layout.sh  check_symbol_parity.sh  cts.sh  differential_test.sh  direct_passthrough_test.sh  enable_amdgpu_at_boot.sh  fuzz.sh  gpu_bind.sh  libhrx_diff_test.sh  mi300_validate.sh  miri.sh  run_preload_test.sh  sanitizer_diff.sh  setup_gpu_ondemand.sh  tsan_suppressions.txt  unsafe_baseline.txt  unsafe_ratchet.sh
tests/apps/: hip_bench.c  hip_direct.c  hip_kernel.hip  hip_smoke.c  hrx_abi_test.c  hrx_bench.c  hrx_fence_test.c  hrx_gpu_test.c  hrx_init_test.c  hrx_mem_test.c  hrx_queue_test.c  hrx_stream_test.c
tests/golden/: intercept_symbols.txt
