[workspace]
resolver = "2"
members = [
    "crates/hip-function-table",
    "crates/hip-logging",
    "crates/hip-intercept",
    "crates/hip-buffer-tracer",
    "crates/hip-noop",
    "crates/iree-sys",
    "crates/hrx-libhrx",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "local"

[profile.release]
opt-level = 2
